[gd_scene load_steps=15 format=2]

[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/slime.png" type="Texture" id=2]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/Player Sprites/shadow.png" type="Texture" id=3]
[ext_resource path="res://audios/OnlineSeminar/hit.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 49.4765

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Enemy" type="Node2D"]
z_index = 2
z_as_relative = false
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 3, -62 )
scale = Vector2( 5.893, 5 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.707123, -39.7954 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -31 )
scale = Vector2( 4.3946, 4.3946 )
frames = SubResource( 10 )
animation = "idle"
frame = 3
playing = true

[node name="TimerTextShow" type="Timer" parent="."]

[node name="TimerToDestroy" type="Timer" parent="."]
wait_time = 0.5

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="TimerTextShow" to="." method="_on_TimerTextShow_timeout"]
[connection signal="timeout" from="TimerToDestroy" to="." method="_on_TimerToDestroy_timeout"]
